fix: css on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,7 +39,7 @@ body {
   font-size: 1.5em;
 }
 
-@media screen and (min-width: 40em ) {
+@media screen and (min-width: 60em ) {
   .content {
     padding: 5em;
     font-size: 1.15em;
